--- a/systems/pf2e/templates/packs/bestiary-browser.html
+++ b/systems/pf2e/templates/packs/bestiary-browser.html
@@ -34,7 +34,7 @@
             <h3>{{localize "PF2E.BrowserFilterTraits"}}</h3>
             <dl style="display:none;">
                 {{#each traits as |trait key|}}
-                <label><dt><input type="checkbox" name="traits-{{lower trait}}"></dt><dd>{{localize trait}}</dd></label>
+                    <label><dt><input type="checkbox" name="traits-{{key}}"></dt><dd>{{localize trait}}</dd></label>
                 {{/each}}
             </dl>
         </div>
