--- a/systems/pf2e/templates/actors/crb-style/tabs/item-line.html
+++ b/systems/pf2e/templates/actors/crb-style/tabs/item-line.html
@@ -1,11 +1,8 @@
 <li class="item" data-item-id="{{item._id}}" data-item-is-container="{{item.isContainer}}">
-    <div class="item-name rollable">
+    <div class="item-name rollable{{#if (and lootsheet (not item.showEdit))}} long{{/if}}">
         <div class="item-image" style="background-image: url('{{item.img}}')"></div>
           <h4>
               {{item.name}}
-              {{#if (and (not item.identified) item.data.identification.identified.name item.showGMInfo)}}
-                  ({{item.data.identification.identified.name}})
-              {{/if}}
               {{#if item.data.attuned.value}}<i class="prepared fas fa-haykal"></i>{{/if}}
               {{#if item.isTwoHanded}}
               <span title="{{localize 'PF2E.TraitTwoHandedHelp'}}">
@@ -19,9 +16,9 @@
     </div>
     {{#if lootsheet}}
         {{#if (eq item.type 'treasure')}}
-            <span class="item-sell-value">{{#if (or item.identified item.showGMInfo)}}{{item.data.value.value}} {{localize (add "PF2E.CurrencyAbbreviations." (lower item.data.denomination.value))}}{{/if}}</span>
+            <span class="item-sell-value">{{#if (or item.isIdentified user.isGM)}}{{item.data.value.value}} {{localize (add "PF2E.CurrencyAbbreviations." (lower item.data.denomination.value))}}{{/if}}</span>
         {{else}}
-            <span class="item-sell-value">{{#if (or item.identified item.showGMInfo)}}{{item.data.price.value}}{{/if}}</span>
+            <span class="item-sell-value">{{#if (or item.isIdentified user.isGM)}}{{item.data.price.value}}{{/if}}</span>
         {{/if}}
     {{else}}
         {{#if (eq item.type 'treasure')}}
@@ -29,51 +26,45 @@
         {{/if}}
     {{/if}}
     <span class="item-quantity">
-      <a class="item-decrease-quantity{{#unless owner}} hidden{{/unless}}">&ndash;</a>
+      <a class="item-decrease-quantity{{#unless editable}} hidden{{/unless}}">&ndash;</a>
       <span>{{item.data.quantity.value}}</span>
-      <a class="item-increase-quantity{{#unless owner}} hidden{{/unless}}">+</a>
+      <a class="item-increase-quantity{{#unless editable}} hidden{{/unless}}">+</a>
     </span>
     <span class="item-weight">{{item.totalWeight}}</span>
 
-    {{#if owner}}
-    <div class="item-controls">
-        {{#if item.isContainer}}
-            {{#if item.containerData.isCollapsed}}
-                <a class="item-control item-toggle-container" title="{{localize 'PF2E.OpenItemTitle'}}"><i class="fas fa-box"></i></a>
+    {{#if editable}}
+        <div class="item-controls">
+            {{#if item.isContainer}}
+                {{#if item.containerData.isCollapsed}}
+                    <a class="item-control item-toggle-container" title="{{localize 'PF2E.OpenItemTitle'}}"><i class="fas fa-box"></i></a>
+                {{else}}
+                    <a class="item-control item-toggle-container" title="{{localize 'PF2E.OpenItemTitle'}}"><i class="fas fa-box-open"></i></a>
+                {{/if}}
             {{/if}}
-            {{#unless item.containerData.isCollapsed}}
-                <a class="item-control item-toggle-container" title="{{localize 'PF2E.OpenItemTitle'}}"><i class="fas fa-box-open"></i></a>
-            {{/unless}}
-        {{/if}}
-        {{#unless item.isContainer}}
-        {{/unless}}
 
-        {{#if item.canBeEquipped}}
-            {{#if (and item.hasInvestedTrait item.identified (not lootsheet))}}
-                <a class="item-control item-toggle-invest {{#if item.isInvested}}active{{/if}}" title="{{localize "PF2E.ui.equipmentInvested"}}"><i class="icon sparkle"></i></a>
+            {{#if item.canBeEquipped}}
+                {{#if (and item.hasInvestedTrait item.isIdentified (not lootsheet))}}
+                    <a class="item-control item-toggle-invest {{#if item.isInvested}}active{{/if}}" title="{{localize "PF2E.ui.equipmentInvested"}}"><i class="icon diamond-with-diamond"></i></a>
+                {{/if}}
+                {{#if (not lootsheet)}}
+                    <a class="item-control item-toggle-equip {{#if item.isEquipped}}active{{/if}}" title="{{localize "PF2E.ui.armorEquipped"}}"><i class="fas fa-tshirt"></i></a>
+                {{/if}}
             {{/if}}
-            {{#if (not lootsheet)}}
-                <a class="item-control item-toggle-equip {{#if item.isEquipped}}active{{/if}}" title="{{localize "PF2E.ui.armorEquipped"}}"><i class="fas fa-tshirt"></i></a>
+            {{#if user.isGM}}
+                {{#if item.isIdentified}}
+                    <a class="item-control item-toggle-identified identified" title="{{localize "PF2E.identification.Mystify"}}"><i class="far fa-question-circle"></i></a>
+                {{else}}
+                    <a class="item-control item-toggle-identified" title="{{localize "PF2E.identification.Identify"}}"><i class="fas fa-question-circle"></i></a>
+                {{/if}}
             {{/if}}
-        {{/if}}
-        {{#if item.showGMInfo}}
-          {{#if item.identified}}
-            <a class="item-control item-toggle-identified identified" title="{{localize "PF2E.identification.Mystify"}}"><i class="far fa-question-circle"></i></a>
-          {{else}}
-            <a class="item-control item-toggle-identified" title="{{localize "PF2E.identification.Identify"}}"><i class="fas fa-question-circle"></i></a>
-          {{/if}}
-        {{/if}}
-        {{#if item.isSellableTreasure}}
-        <a class="item-control item-sell-treasure" title="{{localize "PF2E.ui.sell"}}"><i class="fas fa-coins"></i></a>
-        {{/if}}
-        {{#unless item.isSellableTreasure}}
-
-        {{/unless}}
-        {{#if item.showEdit}}
-          <a class="item-control item-edit" title="{{localize "PF2E.EditItemTitle"}}"><i class="fas fa-edit"></i></a>
-        {{/if}}
-        <a class="item-control item-delete" title="{{localize "PF2E.DeleteItemTitle"}}"><i class="fas fa-trash"></i></a>
-    </div>
+            {{#if (and item.isSellableTreasure item.isIdentified item.showEdit)}}
+                <a class="item-control item-sell-treasure" title="{{localize "PF2E.ui.sell"}}"><i class="fas fa-coins"></i></a>
+            {{/if}}
+            {{#if item.showEdit}}
+                <a class="item-control item-edit" title="{{localize "PF2E.EditItemTitle"}}"><i class="fas fa-edit"></i></a>
+                <a class="item-control item-delete" title="{{localize "PF2E.DeleteItemTitle"}}"><i class="fas fa-trash"></i></a>
+            {{/if}}
+        </div>
     {{/if}}
 </li>
 <div class="container-metadata" data-item-id="{{item._id}}" data-item-is-container="{{item.isContainer}}">
@@ -86,7 +77,7 @@
         {{/if}}
         <div class="container-held-items">
             {{#each item.containerData.heldItems}}
-            {{> systems/pf2e/templates/actors/crb-style/tabs/item-line.html item=this owner=../owner level=(add ../level 1)}}
+                {{> systems/pf2e/templates/actors/crb-style/tabs/item-line.html item=this editable=@root.editable user=@root.user lootsheet=@root.lootsheet}}
             {{/each}}
         </div>
     {{/unless}}
