--- a/systems/pf2e/templates/actors/loot-sheet.html
+++ b/systems/pf2e/templates/actors/loot-sheet.html
@@ -62,11 +62,11 @@
 
         <div class="sheet-content sheet-content-loot">
             <div class="tab inventory" data-group="primary" data-tab="inventory">
-                {{> systems/pf2e/templates/actors/loot/loot-inventory.html }}
+                {{> systems/pf2e/templates/actors/loot/inventory.html}}
             </div>
             <div class="tab description" data-group="primary" data-tab="description">
                 {{editor content=data.details.description.value target="data.details.description.value" button=true
-                owner=owner editable=editable}}
+                user=user editable=editable}}
             </div>
         </div>
     </section>
