--- a/systems/pf2e/templates/actors/loot/inventory.html
+++ b/systems/pf2e/templates/actors/loot/inventory.html
@@ -7,17 +7,18 @@
         </li>
     {{/each}}
     {{#if owner}}
-    <li class="add-coins-popup" title="{{localize 'PF2E.AddCoinsTitle'}}">
-        <button type="button">+</button>
-    </li>
-    <li class="remove-coins-popup" title="{{localize 'PF2E.RemoveCoinsTitle'}}">
-        <button type="button">-</button>
-    </li>
-    {{#if isLoot}}
-    <li class="sell-all-treasure" title="{{localize 'PF2E.SellAllTreasureTitle'}}">
-        <button type="button"><i class="fas fa-coins"></i></button>
-    </li>
-    {{/if}}{{/if}}
+        <li class="add-coins-popup" title="{{localize 'PF2E.AddCoinsTitle'}}">
+            <button type="button">+</button>
+        </li>
+        <li class="remove-coins-popup" title="{{localize 'PF2E.RemoveCoinsTitle'}}">
+            <button type="button">-</button>
+        </li>
+        {{#if isLoot}}
+            <li class="sell-all-treasure" title="{{localize 'PF2E.SellAllTreasureTitle'}}">
+                <button type="button"><i class="fas fa-coins"></i></button>
+            </li>
+        {{/if}}
+    {{/if}}
 </ol>
 
 <ol class="inventory-list directory-list inventory-pane item-container" data-container-type="actorInventory">
@@ -27,16 +28,16 @@
         <span class="item-sell-value">{{localize "PF2E.UnitPriceLabel"}}</span>
         <span class="item-quantity">{{localize "PF2E.QuantityLabel"}}</span>
         <span class="item-weight">{{localize "PF2E.BulkShortLabel"}}</span>
-        {{#if ../owner}}
-        <div class="item-controls" style="display: flex">
-            <a class="item-control item-create" title="{{localize "PF2E.CreateItemTitle"}}" data-type="{{sid}}"><i class="fas fa-plus"></i></a>
-            <a class="item-control inventory-browse" title="{{localize "PF2E.OpenInventoryBrowser"}}" data-type="{{sid}}"><i class="fas fa-search"></i></a>
-        </div>
+        {{#if @root.owner}}
+            <div class="item-controls" style="display: flex">
+                <a class="item-control item-create" title="{{localize "PF2E.CreateItemTitle"}}" data-type="{{sid}}"><i class="fas fa-plus"></i></a>
+                <a class="item-control inventory-browse" title="{{localize "PF2E.OpenInventoryBrowser"}}" data-type="{{sid}}"><i class="fas fa-search"></i></a>
+            </div>
         {{/if}}
     </li>
     {{#each section.items as |item itemId|}}
-        {{#if item.isNotInContainer}}
-            {{> systems/pf2e/templates/actors/crb-style/tabs/item-line.html item=item owner=@root.owner level=1 lootsheet=true}}
+        {{#if (not item.isInContainer)}}
+            {{> systems/pf2e/templates/actors/crb-style/tabs/item-line.html item=item editable=@root.editable user=@root.user lootsheet=true}}
         {{/if}}
     {{/each}}
 {{/each}}
