--- a/systems/pf2e/templates/actors/npc/partials/npc-attack.html
+++ b/systems/pf2e/templates/actors/npc/partials/npc-attack.html
@@ -4,10 +4,10 @@
             <h4>{{action.name}} <span class="activity-icon">{{action.glyph}}</span></h4>
         </div>
         <div class="attack-controls controls expandable">
-            <a class="item-chat chat" title="{{ localize 'PF2E.NPC.SendToChat'}}"><i class="fas fa-comment-alt"></i></a>
-            {{#if isEditable }}
-                <a class="item-edit edit" title="{{ localize 'PF2E.NPC.Edit'}}"><i class="fas fa-edit"></i></a>
-                <a class="item-delete delete" title="{{ localize 'PF2E.NPC.Remove' }}"><i class="fas fa-trash"></i></a>
+            <a class="item-chat chat" title="{{localize "PF2E.NPC.SendToChat"}}"><i class="fas fa-comment-alt"></i></a>
+            {{#if isEditable}}
+                <a class="item-edit edit" title="{{localize "PF2E.NPC.Edit"}}"><i class="fas fa-edit"></i></a>
+                <a class="item-delete delete" title="{{localize "PF2E.NPC.Remove"}}"><i class="fas fa-trash"></i></a>
             {{/if}}
         </div>
     </div>
@@ -22,12 +22,12 @@
         <div class="damage sub-section">
             <div class="flexrow">
                 <button type="button" class="btn damage-button" data-action="damage">{{#each action.damageBreakdown}}{{this}}{{#unless @last}} + {{/unless}}{{/each}}</button>
-                <button type="button" class="btn critical-button" data-action="critical">{{localize 'Critical'}}</button>
+                <button type="button" class="btn critical-button" data-action="critical">{{localize "PF2E.CriticalDamageLabel"}}</button>
             </div>
         </div>
         <div class="attack-detail sub-section expandable expanded">
             <div class="attack-description">
-                {{{ enrichHTML action.description }}}
+                {{{enrichHTML action.description}}}
             </div>
             <div class="traits-list">
                 {{#each traits as |trait traitIndex|}}
