--- a/systems/pf2e/templates/actors/npc/partials/npc-item.html
+++ b/systems/pf2e/templates/actors/npc/partials/npc-item.html
@@ -5,12 +5,19 @@
             <h4 class="{{item.data.traits.rarity.value}}"><a>{{item.name}}</a></h4>
         </div>
         <div class="item-quantity">{{item.data.quantity.value}}</div>
-        <div class="item-controls controls expandable">
+        <div class="item-controls controls">
             <a class="item-chat chat" title="{{localize "PF2E.NPC.SendToChat"}}"><i class="fas fa-comment-alt"></i></a>
-             {{#if isEditable}}
-                 <a class="item-toggle-equip{{#if item.data.equipped.value}} active{{/if}}" title="{{localize "PF2E.ui.armorEquipped"}}"><i class="fas fa-tshirt"></i></a>
-                 <a class="item-edit edit" title="{{localize "PF2E.NPC.Edit"}}"><i class="fas fa-edit"></i></a>
-                 <a class="item-delete delete" title="{{localize "PF2E.NPC.Remove"}}"><i class="fas fa-trash"></i></a>
+            {{#if editable}}
+                {{#if user.isGM}}
+                    {{#if item.isIdentified}}
+                        <a class="item-toggle-identified identified" title="{{localize "PF2E.identification.Mystify"}}"><i class="far fa-question-circle"></i></a>
+                    {{else}}
+                        <a class="item-toggle-identified" title="{{localize "PF2E.identification.Identify"}}"><i class="fas fa-question-circle"></i></a>
+                    {{/if}}
+                {{/if}}
+                <a class="item-toggle-equip{{#if item.data.equipped.value}} active{{/if}}" title="{{localize "PF2E.ui.armorEquipped"}}"><i class="fas fa-tshirt"></i></a>
+                <a class="item-edit edit" title="{{localize "PF2E.NPC.Edit"}}"><i class="fas fa-edit"></i></a>
+                <a class="item-delete delete" title="{{localize "PF2E.NPC.Remove"}}"><i class="fas fa-trash"></i></a>
             {{/if}}
         </div>
     </div>
